[tool.poetry]
name = "tiktoken-chatml"
version = "0.1.0"
description = ""
authors = ["melisa-writer <melisa@writer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
